Parenthesis fix on tablet hints. Smaller css border for better rendering speed.

--- a/release/gff/gff_amharic/source/help/kb.css
+++ b/release/gff/gff_amharic/source/help/kb.css
@@ -746,7 +746,7 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
      border-style: solid;
      border-width: 1px;
      border-color: #777;
-     box-shadow: 0 0 2px 2px #777;
+     box-shadow: 0 0 1px 1px #777;
 }
 
 .tablet.ios div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
@@ -759,7 +759,7 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     border-style: solid;
     border-width: 1px;
     border-color: #777;
-    box-shadow: 0 0 2px 2px #777;
+    box-shadow: 0 0 1px 1px #777;
 }
 
 
@@ -809,14 +809,12 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
 
 .tablet.android div.kmw-key.kmw-key-default[id='ቐ-extra-U_1255'],
 .tablet.android div.kmw-key.kmw-key-default[id='ጘ-extra-U_1E318'],
-.tablet.android div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E5'],
-
-.phone.android div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone.android div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
+.tablet.android div.kmw-key.kmw-key-default[id='𞟠-extra-U_1E7E5']
 {
-     border-style: solid;
-     border-width: 1px;
-     border-color: #eceae4;
-     box-shadow: 0 0 2px 2px #eceae4;
+    border-style: solid;
+    border-width: 1px;
+    border-color: #eceae4;
+    box-shadow: 0 0 1px 1px #eceae4;
 }
 
 .tablet.android div.kmw-key.kmw-key-default[id='ዀ-extra-U_12C0'],
@@ -828,6 +826,14 @@ div.kmw-key.kmw-key-default[id='latin-punct-layer-K_4+shift'] div.kmw-key-popup-
     background: linear-gradient(180deg, #ffffff 0%, #e2f0cb 100%);
     border-style: solid;
     border-width: 1px;
-     border-color: #eceae4;
-     box-shadow: 0 0 2px 2px #eceae4;
+    border-color: #eceae4;
+    box-shadow: 0 0 1px 1px #eceae4;
+}
+
+.phone.android div.kmw-key.kmw-key-default[id='latin-punct-layer-T_BANG'], .phone.android div.kmw-key.kmw-key-default[id='ethio-punct-layer-T_1362']
+{
+    border-style: solid;
+    border-width: 1px;
+    border-color: #ccf1ff;
+    box-shadow: 0 0 1px 1px #ccf1ff;
 }
